--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # http \uC694\uCCAD \uBA54\uC2DC\uC9C0 \uB85C\uAE45 \uB808\uBCA8 \uC124\uC815
 logging.level.org.apache.coyote.http11=debug
+
+# view \uACBD\uB85C \uC124\uC815 (\uC2A4\uD504\uB9C1 \uBD80\uD2B8\uB294 \uBDF0 \uB9AC\uC878\uBC84\uAC00 \uD574\uB2F9 \uC815\uBCF4\uB97C \uBD88\uB7EC\uC640\uC11C \uBDF0\uB85C \uD3EC\uC6CC\uB4DC\uD55C\uB2E4.)
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
